--- a/requirements.txt
+++ b/requirements.txt
@@ -28,9 +28,11 @@ cachetools==4.2.2
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+cmdstanpy==0.9.5
+cmdstanpy==0.9.68
 chess==1.4.0
 click==7.1.2
-coloredlogs==15.0
+picoloredlogs==15.0
 contextlib2==0.6.0.post1
 convertdate==2.3.2
 cycler==0.10.0
