--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,8 @@ hijri-converter==2.1.1
 holidays==0.11.1
 homebrew==0.2.3
 humanfriendly==9.1
+idna==2.10
+
 imagesize==1.2.0
 ipython==7.23.1
 ipython-genutils==0.2.0
@@ -82,6 +84,7 @@ libarchive-c==2.9
 llvmlite==0.34.0
 locket==0.2.0
 LunarCalendar==0.0.9
+lxml==4.6.1
 matplotlib-inline==0.1.2
 mccabe==0.6.1
 mock==4.0.2
@@ -133,7 +136,7 @@ pyzmq==19.0.2
 QDarkStyle==2.8.1
 QtPy==1.9.0
 retrying==1.3.3
-requests
+requests==2.24.0
 ruamel-yaml==0.15.87
 scikit-image==0.17.2
 selenium==3.141.0
